--- a/styles/modules/_search.scss
+++ b/styles/modules/_search.scss
@@ -174,8 +174,9 @@
     padding-right: 5px;
 
     label {
-      line-height: 2em;
-      min-height: 2em;
+      line-height: 1.4em;
+      min-height: 1.4em;
+      padding: 0.3em 0px;
     }
 
     .select2 {
